# StatsFromStrava

./: .gitignore  README.md  pyproject.toml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: activities.py  router_configs.py  users.py
backend/app/models/: activitiy.py
backend/app/services/: activities.py  activity.py  redis.py  strava.py
backend/app/utils/: auth.py
frontend/: pyproject.toml
frontend/app/: main.py
stats-from-strava/: pyproject.toml
