[tool.poetry]
name = "statsfromstrava"
version = "0.1.0"
description = ""
authors = ["OmondiEricDev <ericomondidev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
redis = "^5.2.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
