[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["OmondiEricDev <ericomondidev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7"
streamlit = "^1.42.0"
requests = "^2.32.3"
plotly = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
