[tool.poetry]
name = "stats-from-strava"
version = "0.1.0"
description = ""
authors = ["eric777 <omondieric@team-lab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.0"
jsonschema = "^4.18.6"
pyyaml = "^6.0.1"
watchdog = "^3.0.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
